force-app/main/default/objects/MARCOM_Notes__c/MARCOM_Notes__c.object-meta.xml
<CustomObject>
    <label>MARCOM Note</label>
    <nameField>
        <displayFormat>MN-{0000000}</displayFormat>
        <label>MARCOM Notes ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MARCOM Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>