force-app/main/default/objects/MARCOM_Notes__c/fields/Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_ID__c</fullName>
    <label>Email Template ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>