force-app/main/default/objects/MARCOM_Notes__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>