force-app/main/default/objects/MARCOM_Notes__c/validationRules/Notes_without_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_without_value</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL( Note__c ),  ISBLANK(Note__c) )</errorConditionFormula>
    <errorDisplayField>Note__c</errorDisplayField>
    <errorMessage>Please enter notes</errorMessage>
</ValidationRule>